--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                         <li><a href="#HYPOTHESE">Hypothese</a></li>
                         <li><a href="#ONDERZOEK">Onderzoek</a></li>
                         <ul>
+                            <li><a href="#TEMPO">Tempo</a></li>
                             <li><a href="#TIMBRE">Timbre</a></li>
                             <li><a href="#TOONSOORT">Toonsoort</a></li>
-                            <li><a href="#TEMPO">Tempo</a></li>
                         </ul>
                         <li><a href="#RESULTATEN">Resultaten</a></li>
                         <li><a href="#CONCLUSIE">Conclusie</a></li>
@@ -57,7 +57,7 @@
         <div>
             <h3 id="INLEIDING">Inleiding</h3>
             <p>
-                bla bla bla...
+                bla bla bla bla
             </p>
         </div>
 
@@ -86,77 +86,69 @@
         </div>
 
         <hr>
-
         <div>
-            <h3 id="TIMBRE">Timbre</h3>
-            <div class="bijlage">
-                <iframe width="1633px" src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie
-                    gemaakt met klassieke instrumenten</div>
+            <div>
+                <h3 id="TEMPO">Tempo</h3>
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com//embed/iDW1vkk0Pb8?si=tk0kPWjPhiUW9MeD&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Thelma & Louise (1991) met eigencompositie met hoog tempo</a></div>
+                </div>
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com//embed/iDW1vkk0Pb8?si=tk0kPWjPhiUW9MeD&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Thelma & Louise (1991) met eigencompositie met laag tempo</a></div>
+                </div>
             </div>
-            <div class="bijlage">
-                <iframe src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie
-                    gemaakt met moderne synthesizers</div>
-            </div>
-        </div>
 
-        <hr>
+            <hr>
 
-        <div>
-            <h3 id="TOONSOORT">Toonsoort</h3>
-            <div class="bijlage">
-                <iframe src="https://www.youtube-nocookie.com//embed/FvMWlyP4quc?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in majeur
-                    (origineel nagemaakt)</div>
+            <div>
+                <h3 id="TIMBRE">Timbre</h3>
+                <div class="bijlage">
+                    <iframe width="1633px" src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a> met eigen muziek compositie
+                        gemaakt met klassieke instrumenten</div>
+                </div>
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com/embed/TBIg99ostck?si=B4Qu1DTyZpt3orvj&amp&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Pride and Prejudice (1995)</a>met eigen muziek compositie
+                        gemaakt met moderne synthesizers</div>
+                </div>
             </div>
-            <div class="bijlage">
-                <iframe src="https://www.youtube-nocookie.com//embed/rJY3GC7x0vM?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in mineur
+
+            <hr>
+
+            <div>
+                <h3 id="TOONSOORT">Toonsoort</h3>
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com//embed/FvMWlyP4quc?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in majeur
+                        (origineel nagemaakt)</div>
+                </div>
+                <div class="bijlage">
+                    <iframe src="https://www.youtube-nocookie.com//embed/rJY3GC7x0vM?si=Q_Mw7Zm__GzSIlRN&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div>Scene uit <a href="" target="_blank">Chariots of Fire (1981)</a> met het thema (Vangelis) in mineur
+                    </div>
                 </div>
             </div>
         </div>
         <hr>
-        <div>
-            <h3 id="TEMPO">Tempo</h3>
-            <div class="bijlage">
-                <iframe src="https://www.youtube-nocookie.com//embed/iDW1vkk0Pb8?si=tk0kPWjPhiUW9MeD&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <div>Scene uit <a href="" target="_blank">Thelma & Louise (1991) met eigencompositie met hoog tempo</a></div>
-            </div>
-            <div class="bijlage">
-                <iframe src="https://www.youtube-nocookie.com//embed/iDW1vkk0Pb8?si=tk0kPWjPhiUW9MeD&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <div>Scene uit <a href="" target="_blank">Thelma & Louise (1991) met eigencompositie met laag tempo</a></div>
-            </div>
-        </div>
-
-        <hr>
 
         <div>
             <h3 id="RESULTATEN">Resultaten</h3>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et laboriosam recusandae eaque soluta illum asperiores, mollitia eos, maiores ducimus natus voluptatem alias quis id aliquam! Temporibus nemo blanditiis doloremque perspiciatis.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, minima incidunt quis sit odit possimus. Eius ipsa illum iusto quibusdam at iste in cupiditate quaerat! Quasi nulla minima nisi ipsam.
-            </p>
             <div class="bijlage">
-                <img src="Media/Afbeeldingen/Graph.png" alt="">
-                <div>Grafiek van verschil in emotie</div>
+                <img src="Media/Afbeeldingen/Grafiek Resultaten.png" alt="">
+                <div>Grafiek van resultaten</div>
             </div>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam placeat, iste excepturi cumque accusantium temporibus praesentium velit possimus, aliquid maxime minus? Magnam, labore unde. Earum quia possimus animi aliquam nobis?
-            </p>
+            <div class="bijlage">
+                <img src="Media/Afbeeldingen/Grafiek Gemiddeld.png" alt="">
+                <div>Grafiek van het gemiddelde van de resultaten</div>
+            </div>
         </div>
 
         <hr>
 
         <div>
             <h3 id="CONCLUSIE">Conclusie</h3>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et laboriosam recusandae eaque soluta illum asperiores, mollitia eos, maiores ducimus natus voluptatem alias quis id aliquam! Temporibus nemo blanditiis doloremque perspiciatis.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, minima incidunt quis sit odit possimus. Eius ipsa illum iusto quibusdam at iste in cupiditate quaerat! Quasi nulla minima nisi ipsam.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam placeat, iste excepturi cumque accusantium temporibus praesentium velit possimus, aliquid maxime minus? Magnam, labore unde. Earum quia possimus animi aliquam nobis?
-            </p>
         </div>
 
     
@@ -164,16 +156,13 @@
             <hr>
             <h2 id="PROCES">Hoe ging mijn proces voor het schrijven van de muziek voor mijn profiel werkstuk?</h2>
             <hr>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis saepe nam eius perspiciatis hic esse. Alias ab reiciendis harum, doloremque eius minima praesentium nisi temporibus eos dolorem hic quis illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse nihil animi voluptatibus asperiores debitis doloremque, tenetur officia voluptatum, a reprehenderit iure! Sequi veniam laborum modi hic officiis et? Quaerat, sunt?
-            </p>
-            <hr>
             <h3 id="PROCES_TOONSOORT">Muziekstukken Toonsoort</h3>
             <p>
-                Ik ben een grote fan van Vangelis. Voor een geluidsfragment wilde ik een stuk van hem namaken. 
-                Voordat ik uit was over welke compositie ik ging kiezen, had ik als test het thema van Halloween (John Carpenter) nagemaakt en de toonsoort veranderd. Hierdoor had ik ontdekt dat ik een andere kant op wilde gaan met mijn profielwerkstuk 
-                en vooral wilde gaan focussen op het maken van muziek en daarmee onderzoek doen in plaats van veel bronnen lezen. Uiteindelijk heb ik het thema van chariots of fire gekozen.
+                Als bewonderaar van Vangelis wilde ik een compositie van hem te repliceren. 
+                In mijn zoektocht naar het geschikte stuke, probeerde ik als test het thema van Halloween (John Carpenter) na te bootsen 
+                en daarbij de toonsoort aan te passen. Door dit experiment had ik ontdekt dat ik een andere kant op wilde gaan met mijn profielwerkstuk 
+                en vooral onderzoek wilde gaan doen door het maken van muziek in plaats van bronnen lezen. 
+                Uiteindelijk heb ik het thema van "Chariots of Fire" gekozen.
             </p>
             <div class="bijlage">
                 <audio controls src="Media/Muziek/Halloween Thema.mp3"></audio>
@@ -184,46 +173,47 @@
                 <div><a href="" target="_blank">Halloween (1978)</a> thema majeur</div>
             </div>
             <p>
-                Ik heb het programma logic pro gebruikt. Logic pro heeft genoeg instrumenten om alle partijen na te maken.
+                Voor alle geluidfragmenten heb ik het muziek programma logic pro gebruikt en twee externe plugins (Keyscape en Analog Lab). 
             </p>
             <div class="bijlage">
                 <img src="Media/Afbeeldingen/Logic Pro Chariots of Fire.png" alt="">
                 <div>Logic Pro</div>
             </div>
             <p>
-                Eerst heb ik de piano partij geleerd. Ik heb thuis geen akoestische piano dus heb ik een midi keyboard gebruikt met een piano plugin om deze partij op te nemen. Dit was handig omdat ik later nog het type piano kon aanpassen.
+                Eerst heb ik de piano partij geleerd. Omdat ik geen akoestische piano in huis heb, heb ik gebruikgemaakt van een MIDI-keyboard met een pianoplugin om deze partij op te nemen. Dit was handig, omdat ik later nog het type piano kon aanpassen.
             </p>
             <div class="bijlage">
                 <img src="Media/Afbeeldingen/Keyscape MIDI.png" alt="">
                 <div>Piano plugin Keyscape</div>
             </div>
             <p>
-                Daarna heb ik de percussie nagebootst. De percussie heb ik gemaakt met witte ruis met laagdoorlaatfilter dat oscileert waardoor er een pulse ontstaat.
-                De synth bass speelt alleen een c# in 16e noten. Voor de bass heb ik de Logic pro retro synth gebruikt.
+                Vervolgens heb ik de percussie nagebootst. 
+                Hiervoor heb ik gebruikgemaakt van witte ruis met een laagdoorlaatfilter dat oscilleert, wat resulteert in een beat.. 
+                De synthbas speelt enkel een C# in 16e noten. Hiervoor heb ik ook de Logic Pro Retro Synth ingezet.
             </p>
             <div class="bijlage">
                 <img src="Media/Afbeeldingen/Logic Synth.png" alt="">
                 <div>Logic Pro Retro Synth</div>
             </div>
             <p>
-                De strijkers spelen samen een akkoord. Het akkoord wisselt af van een C# naar een F#. Voor de strijkers heb ik ook de Retro Synth gebruikt met de preset <cite>bright strings</cite>
+                De strijkers spelen gezamenlijk een akkoord dat varieert tussen een C# en een F#. Voor deze strijkerspartij heb ik eveneens de Retro Synth toegepast, met gebruik van de preset bright strings.
             </p>
             <p>
-                Voor de synth blazers gebruikte Vangelis zelf de Yamaha CS80. Deze synthesizer heb ik helaas niet (kost ook maar een kleine €70.000). Gelukkig kreeg ik met mijn midi keyboard gratis software met een paar geluiden van de CS80. Deze heb ik gebruikt voor de blazers.
+                Voor de synthblazers, gebruikte Vangelis zelf de Yamaha CS80. Helaas bezit ik deze synthesizer niet (deze heeft een prijskaartje van zo'n €70.000). Gelukkig ontving ik bij mijn MIDI-keyboard gratis software met geluiden van de CS80, deze heb ik ingezet voor de blazers.
             </p>
             <div class="bijlage">
                 <img src="Media/Afbeeldingen/Vangelis CS80.png" alt="">
                 <div>Vangelis met de Yamaha CS80</div>
             </div>
             <p>
-                De compositie staat origineel in majeur dus nadat alle partijen af waren heb ik alle partijen omgezet naar de mineur toonsoort. Omdat ik alle had opgenomen als MIDI hoefde ik niets opnieuw te spelen.
+                De compositie staat origineel in majeur dus nadat alle partijen af waren heb ik alle partijen omgezet naar de mineur toonsoort. Omdat ik alles had opgenomen als MIDI hoefde ik niets opnieuw te spelen.
             </p>
             <div class="bijlage">
                 <img src="Media/Afbeeldingen/Min Maj.png" alt="">
                 <div>Majeur veranderen in Mineur</div>
             </div>
             <p>
-                Ten slotte heb ik het gemixed, geexporteerd en daarna het beeld er bij geplakt.
+                Ten slotte heb ik het gemixed, geexporteerd en het beeld er bij geplakt.
             </p>
             <div class="bijlage">
                 <img src="Media/Afbeeldingen/Davinci Resolve.png" alt="">
@@ -234,44 +224,14 @@
             </p>
             <hr>
             <h3 id="PROCES_TIMBRE">Muziekstukken Timbre</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet inventore voluptates ea animi, eveniet vel excepturi reprehenderit est et, nostrum ipsam quis eos fugit, similique tempore! Unde deleniti accusamus vero!
-            </p>
             <hr>
             <h3 id="PROCES_TEMPO">Muziekstukken Tempo</h3>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti distinctio ipsa suscipit veritatis, nobis tenetur doloribus delectus? Labore rerum, a ratione, maxime quis sequi dolor ab dignissimos laboriosam aspernatur culpa.
-            </p>
         </div>
 
         <hr>
 
         <div>
             <h3 id="Bijlagen">Bijlagen</h3>
-            <div class="bijlage">
-                <audio src="" controls></audio>
-                <div>Scene uit <a href="" target="_blank">???</a></div>
-            </div>
-            <div class="bijlage">
-                <audio src="" controls></audio>
-                <div>Scene uit <a href="" target="_blank">???</a></div>
-            </div>
-            <div class="bijlage">
-                <audio src="" controls></audio>
-                <div>Scene uit <a href="" target="_blank">???</a></div>
-            </div>
-            <div class="bijlage">
-                <audio src="" controls></audio>
-                <div>Scene uit <a href="" target="_blank">???</a></div>
-            </div>
-            <div class="bijlage">
-                <audio src="" controls></audio>
-                <div>Scene uit <a href="" target="_blank">???</a></div>
-            </div>
-            <div class="bijlage">
-                <audio src="" controls></audio>
-                <div>Scene uit <a href="" target="_blank">???</a></div>
-            </div>
         </div>
 
         <hr>
@@ -294,7 +254,6 @@
                     Amélie – Yann Tiersen <br>
                     Taxi Driver – Bernard Hermann <br>
                     Thelma and Louis – Hans Zimmer <br>
-
                 </i>
             </p>
 
@@ -435,6 +394,7 @@
                 1 uur schrijven. <br>
                 1 uur opmaak. <br>
                 1 uur filmpjes gedownload en geedit <br>
+                1 uur geschreven <br>
             </p>
             <p>
                 <b>Totaal: </b> ?? uur besteed aan mijn profielwerkstuk<br>
