--- a/index.html
+++ b/index.html
@@ -423,6 +423,43 @@
                 <b>Week 01</b> Schrijven en onderzoek<br>
                 <b>Week 02</b> Inleveren PWS <br>
             </p>
+
+            <div>
+                <p>
+                    Opdracht: Compositie in de Impressionistische Stijl <br>
+                    Doel: Het doel van deze opdracht is om een muziekstuk te componeren in de impressionistische stijl, geïnspireerd door componisten zoals Claude Debussy en Maurice Ravel. Je zult werken aan het creëren van een atmosferisch en sfeervol stuk dat de luisteraar meeneemt naar een bepaalde omgeving of stemming.
+                    Stappen:
+                </p>
+                <p>
+                    1. Kies een inspiratiebron: Selecteer een specifieke omgeving, scene, emotie, of beeld dat je wilt uitdrukken in je muziek. Dit kan een landschap, een gevoel van melancholie, een stadsgezicht, of iets anders zijn. Kies een impressionistisch werk uit de moderne. 
+                </p>
+                <p>
+                    2. Kleur en textuur: Impressionistische muziek staat bekend om zijn focus op klankkleur en textuur. Denk na over hoe je verschillende instrumenten en klanken kunt gebruiken om de gewenste sfeer te creëren.
+                </p>
+                <p>
+                    3. Klankkleur en harmonie: Experimenteer met akkoorden en harmonische progressies die een gevoel van vervaging en subtiliteit oproepen. Impressionistische componisten gebruikten vaak akkoorden met toegevoegde noten, verminderde akkoorden en modale harmonieën. 
+                    - Beperk de harmonische beweging: Minimaliseer de beweging tussen akkoorden en creëer langzame en subtiele harmonische verschuivingen. 
+                    -Herhaling van akkoorden kan een gevoel van stilstand en subtiliteit oproepen. 
+                    - Akkoorden met toegevoegde noten zorgen ook voor een goede klankkleur: Voeg toegevoegde noten toe aan akkoorden, zoals de 6e, 9e of 11e, om complexere en minder voorspelbare harmonieën te creëren. Dit kan de muziek een dromerige en subtiele kwaliteit geven.
+                    - Andere tips: modale harmonie, parallelle akkoorden, bitonaliteit, beperkte harmonische beweging, clusterakkoorden. 
+                </p>
+                <p>
+                    4. Melodieën en frasering: Schrijf melodische lijnen die de luisteraar meenemen op een reis. Probeer melodische wendingen en fraseringstechnieken die de indruk wekken van spontaniteit en verandering. Kies een toonladder buiten de bekende toonladders (bijvoorbeeld kerktoonladder etc). 
+                </p>
+                <p>
+                    5. Ritme en tempo: Gebruik ritme en tempo om de gewenste sfeer over te brengen. Impressionistische stukken kunnen variëren in tempo en kunnen ongebruikelijke ritmische patronen bevatten.
+                </p>
+                <p>
+                    6. Vorm en structuur: Overweeg de vorm en structuur van je compositie. Impressionistische stukken kunnen vrij vormloos zijn, met herhalingen en variaties die geleidelijk evolueren.
+                </p>
+                <p>
+                    7. Compositie: Schrijf je muziekstuk op basis van de bovenstaande stappen. Gebruik traditionele notatie of moderne compositiesoftware.
+                </p>
+                <p>
+                    8. Reflectie: Luister naar je compositie en evalueer of je erin geslaagd bent om de gewenste sfeer en van het impressionisme vast te leggen. Zijn de klanken schilderachtig en suggestief?
+                    Deze opdracht daagt je uit om met klankkleur, textuur en emotie te spelen, en om een muzikaal schilderij te creëren dat de luisteraar transporteert naar een specifieke wereld of stemming. Het impressionisme draait om suggestie en atmosfeer, dus laat je creativiteit de vrije loop om een uniek stuk te componeren.
+                </p>
+            </div>
         </div>
 
         <hr>
